--- a/2_Предобработка данных/2_Предобработка данных.ipynb
+++ b/2_Предобработка данных/2_Предобработка данных.ipynb
@@ -4,104 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Антон, привет! \n",
-    "\n",
-    "Меня зовут Максим Попов, и я буду проверять твой проект. Давай будем общаться на «ты». Но если тебе комфортнее на «вы», обязательно сообщи мне об этом. \n",
-    "По ходу тетрадки ты найдешь комментарии к проекту, они будут в отдельных ячейках Markdown с заголовком «Комментарий ревьюера». Постарайся учесть эти комментарии для дальнейших проектов.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "Я буду отмечать комментарии цветом и примечанием. В конце заголовка комментария будет указан номер итерации проверки. Пожалуйста, не удаляй и не правь мои комментарии\n",
-    "\n",
-    "Критично - требует исправления, влияет на удачное выполнение проекта\n",
-    "\n",
-    "Рекомендация - комментарий является рекомендацией или советом. Mожешь учесть их при выполнении будущих заданий. На твое усмотрение\n",
-    "\n",
-    "Отлично - Так отмечены удачные решения и подходы, на которые стоит опираться в будущих проектах\n",
-    "\n",
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "    \n",
-    "\n",
-    "### Комментарий от ревьюера\n",
-    "Критично\n",
-    "\n",
-    "Такой комментарий нужно исправить обязательно, он критически влияет на удачное выполнение проекта.\n",
-    "</div>\n",
-    "    \n",
-    "---\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "    \n",
-    "\n",
-    "### Комментарий от ревьюера\n",
-    "Рекомендация\n",
-    "\n",
-    "Такой комментарий является рекомендацией или советом. Mожешь учесть их при выполнении будущих заданий. На твое усмотрение. \n",
-    "</div>\n",
-    "\n",
-    "---\n",
-    "\n",
-    "<div class=\"alert alert-block alert-success\">\n",
-    "    \n",
-    "\n",
-    "### Комментарий от ревьюера\n",
-    "Отлично\n",
-    "    \n",
-    "Так отмечены удачные решения и подходы, на которые стоит опираться в будущих проектах\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "    \n",
-    "    \n",
-    "### Комментарий от ревьюера v_1\n",
-    "    \n",
-    "Антон, у тебя отличная работа, но надо исправить следующие моменты:\n",
-    "    \n",
-    "1. Категоризация по семейному положению\n",
-    "2. Интерпретация различий между категориями\n",
-    "\n",
-    "Подробные комментарии по ходу работы\n",
-    "\n",
-    "    \n",
-    "Желтые комментарии-рекомендации на твое усмотрение.\n",
-    "    \n",
-    "Если есть вопросы ко мне, можешь оставить их в отдельном комментарии\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    " \n",
-    "    \n",
-    "### Комментарий от ревьюера v_2\n",
-    "    \n",
-    "Антон,привет!\n",
-    "    \n",
-    "Отлично, все критичные комментарии отработаны!\n",
-    "    \n",
-    "Успеха в дальнейшем обучении!\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Привет, Максим! Благодарю за объективное ревью с полезными советами. Доработал проект по твоим замечаниям. Надеюсь, что ничего не упустил.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Исследование надёжности заёмщиков\n",
     "\n",
     "Заказчик — кредитный отдел банка. Нужно разобраться, влияет ли семейное положение и количество детей клиента на факт погашения кредита в срок. Входные данные от банка — статистика о платёжеспособности клиентов.\n",
@@ -130,20 +32,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "    \n",
-    "\n",
-    "### Комментарий от ревьюера v_1\n",
-    "Отлично\n",
-    "    \n",
-    "Молодец, что в начале проекта знакомишь с ним, так работа приобретает структуру и лучше воспринимается.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Шаг 1. Откройте файл с данными и изучите общую информацию"
    ]
   },
@@ -159,28 +47,6 @@
     "m = Mystem()\n",
     "\n",
     "import seaborn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "    \n",
-    "\n",
-    "### Комментарий от ревьюера v_1\n",
-    "Рекомендация\n",
-    "\n",
-    "Все используемые в проекте библиотеки следует импортировать в начале тетрадки, в отдельной ячейке\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Комментарий на замечание от студента:\n",
-    "Учитываю в работе - все используемые библиотеки импортированы в первой ячейке с кодом."
    ]
   },
   {
@@ -659,53 +525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "    \n",
-    "\n",
-    "### Комментарий от ревьюера v_1\n",
-    "Отлично\n",
-    "    \n",
-    "Молодец, что после применения info обращаешь внимание на возможные несоответсвия и пишешь дальнейший план действий. Так ты ничего не упустишь и глубже посмотришь на данные\n",
-    "\n",
-    "Также рекомендую использовать describe для первичного взгляда на данные\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Комментарий от студента:\n",
-    "Спасибо за полезный метод describe, мы его ещё не проходили - буду пользоваться."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Шаг 2. Предобработка данных"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "    \n",
-    "\n",
-    "### Комментарий от ревьюера v_1\n",
-    "Рекомендация\n",
-    "    \n",
-    "В начале шага следует написать перечень действий, который планируешь выполнить. Так ты ничего не упустишь и добавишь проекту структуры\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Комментарий на замечание от студента:\n",
-    "Исправляюсь - добавлен перечень основных действий ниже:"
    ]
   },
   {
@@ -1331,21 +1151,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "\n",
-    "    \n",
-    "### Комментарий от ревьюера v_1\n",
-    "Отлично\n",
-    "\n",
-    "Отличная обработка пропусков, молодец, что не заменяешь общей медианой\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Примечание:** Значения в столбце days_employed переданы некорректно (попадаются отрицательные значения и единица измерения выражена явно не в днях недели).  Значения в колонке можно обработать с помощью метода .abs(), а пропущенные значения заполнить средним значением по столбцу. Но нам не нужны эти данные в работе - можно вообще избавиться от этого столбца."
    ]
   },
@@ -1356,21 +1161,6 @@
    "outputs": [],
    "source": [
     "df.drop('days_employed', axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "\n",
-    "    \n",
-    "### Комментарий от ревьюера v_1\n",
-    "Отлично\n",
-    "\n",
-    "Все верно, без этих данных можно обойтись\n",
-    "    \n",
-    "</div>"
    ]
   },
   {
@@ -1418,7 +1208,7 @@
    "cell_type": "code",
    "execution_count": 173,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1662,24 +1452,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "\n",
-    "    \n",
-    "### Комментарий от ревьюера v_1\n",
-    "Отлично\n",
-    "\n",
-    "Отлично, молодец, что обработал эти столбцы\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 177,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2013,20 +1790,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "\n",
-    "    \n",
-    "### Комментарий от ревьюера v_1\n",
-    "\n",
-    "Отлично, теперь данные хранятся в правильно виде 👍🏻\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Обработка дубликатов"
    ]
   },
@@ -2096,21 +1859,6 @@
     "2. Количество полных дубликатов было подсчитано с помощью методов .duplicated().sum() и удалены с момощью метода drop_duplicates()\n",
     "\n",
     "Возможной причиной появления дубликатов могла явиться ошибка при переносе информации из других источников, а также повторное добавление информации в базу при обращении клиента в банк."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "\n",
-    "    \n",
-    "### Комментарий от ревьюера v_1\n",
-    "\n",
-    "Отлично, дубликаты обработаны\n",
-    "    \n",
-    "    \n",
-    "</div>"
    ]
   },
   {
@@ -2238,20 +1986,6 @@
     "* кредит на приобретение автомобиля\n",
     "* кредит на получение образования\n",
     "* кредит на проведение свадьбы"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "\n",
-    "    \n",
-    "### Комментарий от ревьюера v_1\n",
-    "\n",
-    "С лемматизацией разобрался 👍🏻\n",
-    "    \n",
-    "</div>"
    ]
   },
   {
@@ -2480,31 +2214,6 @@
     "family_id = df[['family_status', 'family_status_id']]\n",
     "family_id = family_id.drop_duplicates().reset_index(drop=True)\n",
     "family_id"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "    \n",
-    "\n",
-    "### Комментарий от ревьюера v_1\n",
-    "Критично\n",
-    "\n",
-    "Не надо так поступать с  данными по семейному положению))\n",
-    "    \n",
-    "Все эти статусы разные и могут вести себя по-разному для банка. Сужая данные, ты рискуешь упустить важные для банка тенденции\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Комментарий на замечание от студента:\n",
-    "В предыдущей версии проекта категоризировал семейное положение на 2 категории: одинокие и неодинокие. Получил замечание, теперь учитываю это в исправленной версии проекта - удалил функцию категоризации и вставку нового столбца в таблицу. В таком случае датасет уже содержит достаточно подходящую категоризацию по семейному положению, которую можно использовать в работе."
    ]
   },
   {
@@ -2942,22 +2651,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "\n",
-    "    \n",
-    "### Комментарий от ревьюера v_1\n",
-    "\n",
-    "Отлично, с категоризацией разобрался 👍🏻\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Вывод**"
    ]
   },
@@ -2975,43 +2668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "\n",
-    "    \n",
-    "### Комментарий от ревьюера v_1\n",
-    "\n",
-    "Молодец, что не забываешь про вывод\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Шаг 3. Ответьте на вопросы"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "    \n",
-    "\n",
-    "### Комментарий от ревьюера v_1\n",
-    "Рекомендация\n",
-    "    \n",
-    "В начале шага следует написать перечень действий, который планируешь выполнить. Так ты ничего не упустишь и добавишь проекту структуры\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Комментарий на замечание от студента:\n",
-    "Исправляюсь - добавлен перечень основных действий ниже:"
    ]
   },
   {
@@ -3144,30 +2801,6 @@
    "metadata": {},
    "source": [
     "Процент заемщиков, не вернувших кредит в срок, выше среди заемщиков с детьми на 1,67% по сравнению с заемщиками без детей. На основании этого можно сделать вывод, что наличие детей у заемщика влияет на вероятность возврата кредита в срок."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "    \n",
-    "\n",
-    "### Комментарий от ревьюера\n",
-    "Критично\n",
-    "\n",
-    "Откуда взята такая метрика? Такой расчет некорректен.\n",
-    "    \n",
-    "У тебя есть две доли и разница между этими долями это просто разница, вычитание. Разница между ними в 1,67%\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Комментарий на замечание от студента:\n",
-    "Понял свою ошибку - исправил вывод."
    ]
   },
   {
@@ -3698,20 +3331,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "\n",
-    "    \n",
-    "### Комментарий от ревьюера v_1\n",
-    "\n",
-    "Графики уже во втором проекте 👍🏻\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Вывод**"
    ]
   },
@@ -3915,36 +3534,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "\n",
-    "    \n",
-    "### Комментарий от ревьюера v_1\n",
-    "\n",
-    "Доли расчитаны верно 👍🏻\n",
-    "    \n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "    \n",
-    "\n",
-    "### Комментарий от ревьюера v_1\n",
-    "Критично\n",
-    "\n",
-    "Но интерпретация неверна, выводы нужно переделать\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Шаг 4. Общий вывод"
    ]
   },
@@ -3962,57 +3551,6 @@
     "- наибольший процент просроченных кредитов имеют заемщики, взявшие кредит на автомобиль и на образование;\n",
     "- средний процент у заемщиков, взявших кредит на свадьбу;\n",
     "- наименьший процент у заемщиков, взявших кредит на недвижимость."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "    \n",
-    "\n",
-    "### Комментарий от ревьюера v_1\n",
-    "Отлично\n",
-    "    \n",
-    "Отличный вывод 👍🏻\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Чек-лист готовности проекта\n",
-    "\n",
-    "Поставьте 'x' в выполненных пунктах. Далее нажмите Shift+Enter."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- [x]  открыт файл;\n",
-    "- [x]  файл изучен;\n",
-    "- [x]  определены пропущенные значения;\n",
-    "- [x]  заполнены пропущенные значения;\n",
-    "- [x]  есть пояснение, какие пропущенные значения обнаружены;\n",
-    "- [x]  описаны возможные причины появления пропусков в данных;\n",
-    "- [x]  объяснено, по какому принципу заполнены пропуски;\n",
-    "- [x]  заменен вещественный тип данных на целочисленный;\n",
-    "- [x]  есть пояснение, какой метод используется для изменения типа данных и почему;\n",
-    "- [x]  удалены дубликаты;\n",
-    "- [x]  есть пояснение, какой метод используется для поиска и удаления дубликатов;\n",
-    "- [x]  описаны возможные причины появления дубликатов в данных;\n",
-    "- [x]  выделены леммы в значениях столбца с целями получения кредита;\n",
-    "- [x]  описан процесс лемматизации;\n",
-    "- [x]  данные категоризированы;\n",
-    "- [x]  есть объяснение принципа категоризации данных;\n",
-    "- [x]  есть ответ на вопрос: \"Есть ли зависимость между наличием детей и возвратом кредита в срок?\";\n",
-    "- [x]  есть ответ на вопрос: \"Есть ли зависимость между семейным положением и возвратом кредита в срок?\";\n",
-    "- [x]  есть ответ на вопрос: \"Есть ли зависимость между уровнем дохода и возвратом кредита в срок?\";\n",
-    "- [x]  есть ответ на вопрос: \"Как разные цели кредита влияют на его возврат в срок?\";\n",
-    "- [x]  в каждом этапе есть выводы;\n",
-    "- [x]  есть общий вывод."
    ]
   }
  ],
@@ -14434,7 +13972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
